# DeepM

./: CMakeLists.txt  README.md  go.mod  main.cpp  main.go
bot/: main.py  model.json
include/: FixLetter.h  Generator.h  LettersDivision.h  Mistake.h
src/: FixLetter.cpp  Generator.cpp  LettersDivision.cpp  Mistake.cpp
web/: addquote.go  go.mod  handlers.go  main.go
web/data/: model.json  text.json
